--- a/flowpad/Views/WhatsNewDialog.xaml
+++ b/flowpad/Views/WhatsNewDialog.xaml
@@ -21,9 +21,13 @@
             <!-- x:Uid="WhatsNew_Body"-->
             <TextBlock
                IsTextSelectionEnabled="True"
-                TextWrapping="WrapWholeWords">New Features and changes for update 3.1.2:
+                TextWrapping="WrapWholeWords">New Features and changes for update 3.2.3:
                 <LineBreak/>
-                -Open sourced app on github 
+                -Drawings can now be exported as an image (save as an image)
+                <LineBreak/>
+                -Export as .jpg, .jpeg, .png, .bmp, .gif, .jpegxr and .tiff
+                <LineBreak/>
+                -Fixed an issue where opening .gif(non isf) images from inkdrawings folder would crash the app
                 <LineBreak/>
                 -Minor app design changes
                  <LineBreak/>
