--- a/flowpad/App.xaml
+++ b/flowpad/App.xaml
@@ -11,7 +11,7 @@
                 <ResourceDictionary Source="/Styles/_Colors.xaml"/>
                 <ResourceDictionary Source="/Styles/_FontSizes.xaml"/>
                 <ResourceDictionary Source="/Styles/_Thickness.xaml"/>
-
+                <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
                 <ResourceDictionary Source="/Styles/TextBlock.xaml"/>
                 <ResourceDictionary Source="/Styles/CommandBar.xaml"/>
                 <ResourceDictionary Source="/Styles/Page.xaml"/>
